# asyncpp-grpc

./: CMakeLists.txt  README.md
.github/actions/install/grpc/: action.yml
.github/workflows/: cmake.yml  compiler-support.yml
cmake/: GenerateGRPC.cmake  GetGRPC.cmake  GetGTest.cmake
cmake/Hunter/: config.cmake
include/asyncpp/grpc/: bidi_streaming_task.h  call.h  calldata_interface.h  client_cq.h  client_streaming_call.h  client_streaming_task.h  client_unary.h  generic_method_awaiter.h  grpc_exception.h  rw_tag.h  server.h  server_bidi_streaming_task.h  server_client_streaming_task.h  server_server_streaming_task.h  server_streaming_call.h  server_streaming_task.h  server_unary_task.h  task.h  traits.h  unary_call.h  unary_task.h  util.h
src/grpc/: client_cq.cpp  server.cpp  util.cpp
test/: bidi_streaming_task.cpp  call.cpp  client_cq.cpp  client_streaming_task.cpp  client_unary.cpp  dummy.proto  server_bidi_streaming.cpp  server_client_streaming.cpp  server_server_streaming.cpp  server_streaming_task.cpp  server_unary.cpp  task.cpp  test_async_server.h  test_cq.h  test_server.h  traits.cpp  unary_call.cpp  unary_task.cpp
